--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,8 @@ project(pong)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMAKE")
-set(SOURCE_FILES  main.cpp src/Window.cpp src/Game.cpp src/Player.cpp src/Ball.cpp src/GamePlayController.cpp)
+set(SOURCE_FILES  main.cpp src/Window.cpp src/Game.cpp src/Player.cpp src/Ball.cpp src/GamePlayController.cpp
+        src/GameObjects.cpp src/Bot.cpp)
 
 Message("")
 Message( STATUS "SOURCE entry point : " ${SOURCE_FILES} )
